cert-manager/party-clippy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: party-clippy
  namespace: nginx-ingress
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: party-clippy
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
