cert-manager/party-clippy-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ancientrome-ingress
  namespace: ingress-nginx
  annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
   kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - clippy.ancientrome.guru
    secretName: clippy-ancientrome-guru-tls
  rules:
  - host: clippy.ancientrome.guru
    http:
     paths:
     - backend:
        serviceName: party-clippy
        servicePort: 80
